--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -962,6 +962,8 @@ With \emph{heavy}-specific values for contextual noise---all other parameters re
 
 To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we fit predicate-specific values for contextual noise.  With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{bigtallmodel}; once again, the fit is near perfect.
 
+\ndg{why not model all of the data, too, uncollapsed? eg i'd like to see a version of fig 9 that has both data and model.... in fact this plus the more qualitative fig 11 may be all we need.}
+
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{plots/bigtallmodel.eps}
@@ -971,6 +973,7 @@ To qualitatively evaluate the role of contextual predictability for \emph{big} a
 
 In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact quantitative predictions of the observed human behavior. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
 
+\ndg{some caveat about what the model is doing (formalizing the pragmatic theory, accommodating the data) and not doing (predicting the quantitative details of the data).}
 
 \section{General discussion}
 
@@ -981,17 +984,17 @@ On this pragmatic account, stubborn distributivity does not form a distinct cate
 
 %\ndg{i'd prefer to have the info in the net three paragraphs organized by effect, rather than expt: status of classes according to stubbornness, effect of predictability, effect of speaker knowledge.}
 
-We found evidence for this pragmatic explanation over the course of three experiments. Perhaps most problematic for a categorial account of stubborn distributivity were the results of Expt.~2, where we showed that predicates do not form neat groupings according to whether they are stubbornly distributive; stubbornness indeed is gradient, and depends on many aspects of the context of predication. Here we focused on two such aspects: the contextual predictability of collective properties and speakers' access to knowledge.
+We found evidence for this pragmatic explanation over the course of three experiments. Perhaps most problematic for a categorial account of stubborn distributivity were the results of Expt.~2, where we showed that predicates do not form neat groupings according to whether they are stubbornly distributive; stubbornness indeed is gradient. It further depends on many aspects of the context of predication. Here we focused on two such aspects: the contextual predictability of collective properties and speakers' access to knowledge.
 
-After manipulating the regularity of the predication context directly in Expt.~3, we found that more regular contexts yielded greater rates of collective paraphrase endorsement. We thus confirmed our hypothesis: increasing contextual predictability of collective properties---by increasing the regularity of the contexts themselves---increases rates of collective interpretations. In other words, rates of collective interpretation were shown to be influenced by an interaction between the predictability of the property named and the amount of noise in the context of predication. 
+After manipulating the regularity of the predication context directly in Expt.~3, we found that more regular contexts yielded greater rates of collective paraphrase endorsement. We thus confirmed our hypothesis: increasing contextual predictability of collective properties---by increasing the regularity of the contexts themselves---increases rates of collective interpretations. In other words, rates of collective interpretation were shown to be malleable, in this case influenced by the predictability of the property named in the specific context of predication. 
 %First, in Expt.~1, we verified the phenomenon of stubborn distributivity, demonstrating that \emph{big} resists collective interpretations while \emph{heavy} admits them. The results of Expt.~1 also begin to demonstrate the role of 
 
-We similarly confirmed our hypothesis regarding speaker knowledge: in Expts.~1 and 3, we manipulated the discourse context by limiting speaker access to knowledge. We found that when speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely; speakers are less likely to intend an interpretation for which they lack epistemic support.
+We similarly confirmed our hypothesis regarding speaker knowledge: in Expts.~1 and 3, we manipulated the discourse context in such a way as to plausibly limit the speaker's access to knowledge of individual properties. We found that when speakers plausibly lacked epistemic support for a distributive interpretation, collective interpretations became more likely; speakers are less likely to intend an interpretation for which they lack epistemic support.
 
 %While this reasoning is enough to motivate our experiments, some confusion could remain about the exact nature and role of factors such as predictability. 
-In section \ref{model} we formalized our hypotheses with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability and speaker knowledge. 
+In section \ref{model} we formalized our hypotheses with a computational model of pragmatic dissambiguation that gives a precise role for contextual noise and speaker knowledge. This pragmatic model indeed predicts that the acceptability of collective readings should depend on predictability and speaker knowledge. Formalizing the pragmatic approach is an important step in validating it as a coherent theory of plural predication and  stubborn distributivity.
 
-In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
+%In what follows, we discuss in more detail the consequences of these findings for the theories they inform.
 
 \subsection{Implications for semantic theories of plural predication}
 
@@ -1001,19 +1004,24 @@ In what follows, we discuss in more detail the consequences of these findings fo
 
 Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. 
 %Specifically, stubbornly distributive predicates refuse pluralities from their basic denotations. 
-Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. And it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
+Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. We claim it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
 
-Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates (or as a preference for plural arguments with fixed physical arrangements), but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
+Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement, speaker perspective, etc. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates (or as a preference for plural arguments with fixed physical arrangements), but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
 
-Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. Looking at naturally-occurring examples of plural predication, we identified the most frequent subject nouns for the stubbornly distributive predicates \emph{big} and \emph{small} in a plural predication sentence frame. These predicates generally resisted collective interpretations, as we would expect if they were stubbornly distributive, but certain subject nouns yielded greater rates of collective interpretations. Crucially, these were the subject nouns that suggested relatively specific collective properties. 
+Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. Looking at naturally-occurring examples of plural predication, we identified the most frequent subject nouns for the stubbornly distributive predicates \emph{big} and \emph{small} in a plural predication sentence frame. These predicates generally resisted collective interpretations, as we would expect if they were stubbornly distributive, but certain subject nouns yielded greater rates of collective interpretations. Crucially, these seemed to be subject nouns that suggested relatively specific collective properties. 
 Again, contextual predictability of the collective property determines availability of collective interpretations.
 
-Note that subject nouns already played a central role in the disambiguation of plural predications. \cite{schwarzschild2011} observed that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. He observed a similar, though opposite effect for mass nouns, which lack any information about physical arrangement. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (e.g., \emph{the pile of boxes} names a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these collectivizing nouns seem to unlock the collective interpretation. Just as our contextual manipulation increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the information-theoretic mechanism remains the same.
-\ndg{shouldn't pile have unpredictable arrangement??} \gcs{it's much more predictable than just \emph{the boxes}}
+Note that subject nouns already played a central role in the disambiguation of plural predications. \cite{schwarzschild2011} observed that physically aggregating a plurality using an atomizing noun like \emph{pile} or \emph{stack} greatly increases the availability of collective interpretations. He observed a similar, though opposite effect for mass nouns, which lack any information about physical arrangement. Again, semantics might attend to the atomic status of the resulting noun phrase in its evaluation of stubborn distributivity (e.g., \emph{the pile of boxes} names a single atom, while \emph{the boxes} most likely does not), but pragmatics provides us with an explanation for why these collectivizing nouns seem to unlock the collective interpretation. Just as our contextual manipulation increased contextual predictability of collective size or height by increasing the likelihood of encountering a plurality of boxes in a specific physical arrangement, so too do atomizing nouns. The arrangement of a \emph{stack} or \emph{pile} of boxes is much more regular across contexts than an abstract collection thereof. It is this regularity introduced by the atomizing noun that permits an otherwise elusive collective interpretation; the pragmatic mechanism of determining the reading remains the same.
+%\ndg{shouldn't pile have unpredictable arrangement??} \gcs{it's much more predictable than just \emph{the boxes}}
 
 %\ndg{do we need to more directly address david beaver and chris kennedy's question about whether the action is in the predicate or the noun? my take is that it could be either -- our model and results are at the level of the whole phrase, leaving open where in the compositional / lexical semantics the ambiguity is actually located.} \gcs{I added a bit to the discussion above about how stubbornly distributive predicates might require plural arguments with fixed arrangements. We also discuss the issue indirectly in the discussion of Expt.~3. Not sure if we should say much more about this.}
 
-To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication. The success of this model adds to the growing body of support for the central role of rational inference in communication; we turn next to its details.
+To understand this mechanism, namely how contextual predictability affects the calculus of interpretation choice, we modeled its contribution explicitly within a computational model of plural predication. Both the formal analysis and experimental results operate at the level of whole utterances. They leave open several questions of compositional semantics. Most notably, we assume that a plural predication is ambiguous between collective and distributive readings. The locus of this ambiguity could be in the predicate, in the noun phrase, or only in the composition of the two. For instance, it may be that the noun phrase can be construed as either a plurality or plural entity, giving rise to the ambiguity in plural predication. Future research will be needed to pin down the compositional source of the ambiguity; having a theory of how the ambiguity is resolved in context is likely to help. \ndg{greg, check this paragraph.}
+
+%The success of this model adds to the growing body of support for the central role of rational inference in communication; we turn next to its details.
+
+%\ndg{nts: compositional semantics question -- where is the ambiguity.}
+
 
 \subsection{Implications for formal models of pragmatics}
 
@@ -1021,10 +1029,20 @@ To understand this mechanism, namely how contextual predictability affects the c
 
 Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. 
 %Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. 
-Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive not just qualitative, but quantitative predictions. Our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. 
+Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs \ndg{cite something}), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model to derive that makes quantitative predictions. 
+%Our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. 
 By considering utterance semantics within an articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
 
-Formulated within the Rational Speech-Acts framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics, to match near-perfectly participants' behavior in our experimental paradigm. We showed how ambiguity resolution gets modeled as pragmatic inference about a lifted-variable that determines the literal semantics of an utterance. To capture stubborn distributivity, we made our literal semantics dependent on noise that comes from uncertainty about context, and saw that when contextual noise differentially affects alternate interpretations, the relative utility of an interpretation changes. Both the noise and the epistemic manipulations serve as a test of whether a missing reading is truly grammatically prohibited, or merely pragmatically dispreferred. In the case of pragmatically dispreferred readings, given the discrete, isolable components of the model, we can identify the contribution and effect of pragmatic factors at each level of inference.
+Our model was formulated within the Rational Speech-Acts framework, and explores two extensions that may have broader consequences. First, we used the ``lifted variable'' approach to formulate ambiguity resolution as an active pragmatic process.
+Ambiguity is endemic to natural language (for a recent discussion, see \citealp{piantadosietal2012}); taken out of context, nearly everything we say lacks its intended meaning. Applying the pragmatic approach to other cases of ambiguity may be a fruitful way to understand complex interactions between semantics, context, and world-knowledge in cases of multiple potential meanings.
+
+Second, we highlighted the role that context-specific predictability, or noise, in computing meaning can have on pragmatic interpretation. Interlocutors are finely tuned to the pragmatic usefulness of expressions in language; unavoidable noise in interpretation can make expressions less useful, and hence dis-preferred. We have applied this mechanism to disambiguition in plural predication, but it is likely to have an impact throughout language.
+
+
+
+%Beyond the domain of plural predication, the lessons learned have far reach: speakers and listeners prefer more stable, more potentially informative utterances and interpretations; they also reason rationally about the evidence available as messages are selected. Ambiguity is endemic to natural language (for a recent discussion, see \citealp{piantadosietal2012}); taken out of context, nearly everything we say lacks its intended meaning. Both in our theories and in our daily lives, we therefore rely on context to specify the underspecified. Here we have demonstrated two ways context, together with the reasoning we bring to bear on it, achieves that goal.
+%
+%Formulated within the Rational Speech-Acts framework, our model leveraged Bayesian inference, together with minimal assumptions about utterance semantics, to match near-perfectly participants' behavior in our experimental paradigm. We showed how ambiguity resolution gets modeled as pragmatic inference about a lifted-variable that determines the literal semantics of an utterance. To capture stubborn distributivity, we made our literal semantics dependent on noise that comes from uncertainty about context, and saw that when contextual noise differentially affects alternate interpretations, the relative utility of an interpretation changes. Both the noise and the epistemic manipulations serve as a test of whether a missing reading is truly grammatically prohibited, or merely pragmatically dispreferred. In the case of pragmatically dispreferred readings, given the discrete, isolable components of the model, we can identify the contribution and effect of pragmatic factors at each level of inference.
 
 %The model's success and structure serve to support the intuitions that motivated it: increasing the contextual predictability of collective properties increases the probability of an ambiguous plural predication receiving a collective interpretation. 
 
@@ -1038,7 +1056,6 @@ Formulated within the Rational Speech-Acts framework, our model leveraged Bayesi
 
 %With both contextual predictability and speaker knowledge, 
 
-Beyond the domain of plural predication, the lessons learned have far reach: speakers and listeners prefer more stable, more potentially informative utterances and interpretations; they also reason rationally about the evidence available as messages are selected. Ambiguity is endemic to natural language (for a recent discussion, see \citealp{piantadosietal2012}); taken out of context, nearly everything we say lacks its intended meaning. Both in our theories and in our daily lives, we therefore rely on context to specify the underspecified. Here we have demonstrated two ways context, together with the reasoning we bring to bear on it, achieves that goal.
 
 
 \section{Conclusion}
