--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -169,8 +169,8 @@ To whit, changing the speaker's epistemic state ought to influence the resulting
 If a speaker lacks evidence that would verify a specific interpretation, and if a listener knows this about the speaker, then that unsupported interpretation should be particularly improbable. This intuition derives straightforwardly from the Maxim of Quality from \cite{grice1975}: ``Do not say that for which you lack adequate evidence.'' 
 We test this prediction first in Expt.~1 and then with a more sensitive measure in Expt.~3.
 
-\gcs{this paragraph feels out of place, but I don't know where else to put it..}
-To understand more precisely why and how context  influences the interpretation of plural predication, we formalize its contribution under a pragmatic account of ambiguity resolution in section \ref{model}, using a variant of the Rational Speech-Acts model \citep[e.g.,][]{frankgoodman2012,lassitergoodman2013}. The model explains the patterns of our data well, supporting the underlying hypothesis.
+%\gcs{this paragraph feels out of place, but I don't know where else to put it..}
+%To understand more precisely why and how context  influences the interpretation of plural predication, we formalize its contribution under a pragmatic account of ambiguity resolution in section \ref{model}, using a variant of the Rational Speech-Acts model \citep[e.g.,][]{frankgoodman2012,lassitergoodman2013}. The model explains the patterns of our data well, supporting the underlying hypothesis.
 
 Before testing the predictions of our pragmatic account, we must establish a way of studying plural predication experimentally; that is, a way to unambiguously access distributive vs.~collective interpretations. To that end, in Expt.~1, we show that the particles \emph{each} and \emph{together} reliably disambiguate plural predication. 
 
@@ -335,7 +335,7 @@ One way to access interpretations of potentially ambiguous plural predications i
 \a.\label{each} The boxes \textbf{each} were big/heavy/tall.
 \b.\label{together} The boxes \textbf{together} were big/heavy/tall.
 
-Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm. We do so by asking participants to choose between two collections of boxes as the referent of each definite description in \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection held the property individually (but not collectively), while the other collection held the property (but the individuals in it did not).
+Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm. We do so by asking participants to choose between two collections of boxes as the referent of each definite description in \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection hold the property individually (but not collectively), while the other collection hold the property (but the individuals in it do not).
 We expect the two disambiguated sentences to lead to robust selection of the corresponding collection, while selections for the ambiguous sentence will indicate preferences for its interpretation.
 In addition, we begin to explore the role of context by manipulating the plausible knowledge of the speaker: whether he is likely to have access to the relevant information about each object, or only about the collection.
 
@@ -377,7 +377,7 @@ Results were coded in terms of whether participants chose the collective referen
 
 To evaluate the disambiguating potential of our paraphrases, we first look at responses to these paraphrases, excluding the bare utterance. Mean proportion of collective referent choice for collective paraphrases with \emph{together} was 85\% (i.e., near ceiling); for distributive paraphrases with \emph{each} this proportion was 10\% (i.e., near floor). We fit a mixed effects logistic regression model \citep{baayenetal2008} using the \emph{lme4} package \citep{batesetal2014} in \emph{R}, predicting referent choice by \textsc{utterance} (``each,'' ``together'') and its interaction with \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}; \emph{big} was coded as the reference level), as well as \textsc{trial} order.  The model included random intercepts for participants and scenarios (i.e., the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds a main effect of \textsc{utterance} ($\beta$ = 4.99, $SE$ = 0.82, $z$ = 6.08, p $<$ 0.001), confirming that collective \emph{together} yielded greater rates of collective referent choice than distributive \emph{each}; the interactions with \textsc{predicate} were not significant (\emph{heavy}: $\beta$ = -1.39, $SE$ = 0.91, $z$ = -1.52, p $=$ 0.13; \emph{tall}: $\beta$ = -0.63, $SE$ = 0.95, $z$ = -0.66, p $=$ 0.51). The effect of \textsc{trial} was also not significant ($\beta$ = 0.07, $SE$ = 0.07, $z$ = 1.00, p $=$ 0.32). Thus, the ``together'' utterances yielded collective referent choices, and the ``each'' utterances did not, for each of the three predicates.
 %\ndg{should we have predicate be a predictor here so that we can report (whether) the predicate didn't affect choice for the fully dissambiguated phrases?}\gcs{if we have predicate interact with utterance, the interaction is not significant. include?}
-\gcs{changed around analysis to include interactions with predicate as predictors}
+%\gcs{changed around analysis to include interactions with predicate as predictors}
 
 To evaluate the behavior of the predicates in the absence of the disambiguating particles, together with the effect of our scenario manipulation, we next consider responses to the bare, potentially ambiguous utterance. We fit a mixed effects logistic regression model predicting referent choice by \textsc{predicate} (\emph{big}, \emph{heavy}, \emph{tall}), \textsc{scenario} (``move,'' ``inspect''), and \textsc{trial} order. We dummy coded the \textsc{predicate} predictor, with \emph{big} as the reference level. The model included random intercepts and slopes for participants (grouped by \textsc{trial}; the maximal random effects structure supported by the data). The full regression model appears in Appendix \ref{expt1results}. The model finds main effects of \textsc{predicate} for both the \emph{heavy} ($\beta$ = 3.05, $SE$ = 1.23, $z$ = 2.48, p $<$ 0.05) and the \emph{tall} ($\beta$ = 3.63, $SE$ = 1.29, $z$ = 2.82, p $<$ 0.01) contrasts. Compared to \emph{big}, the other predicates yielded greater rates of collective referent choice in ``bare'' utterances. While the effect of \textsc{scenario} did not reach significance, we note the trend in Fig.~\ref{results2} whereby ``move'' scenarios tended to have higher rates of collective referent choice for bare \emph{heavy} utterances (34\% ``move'' vs.~14\% ``inspect''); a post-hoc test of this difference approaches significance ($t$ = -1.70, \emph{df} = 47.96, $p$ = 0.096).
 
@@ -396,7 +396,7 @@ The disambiguating paraphrases behave as expected: \emph{each} delivers a distri
 
 As discussed above, one candidate factor is the contextual predictability of the collective property: how easy it is for speakers and listeners to arrive at the same collective property for a given set of objects. We have seen that collective weight is a stable property of sets, which stands to explain the complaisance of \emph{heavy} toward collective interpretations. In the context of the current experiment, collective height is also predictable: boxes  always appeared stacked one on top of the other, yielding stable total set heights. Collective size, however, could vary depending on the strategy used to evaluate it (height? width? area? volume?) as well as on the arrangement of the objects said to hold it, thus accounting for the lack of collective interpretations for bare \emph{big}. In Expt.~3, we use the paraphrase methodology to directly investigate the role of contextual predictability in plural predication.
 
-The results of the current experiment also leave open the possibility of the influence of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights; the listener is therefore less likely to assume that the speaker intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
+The results of the current experiment also leave open the possibility of the influence of speaker knowledge in plural predication: based solely on whether the context scenario had Cubert move vs.~inspect the boxes he received, we see a trend whereby bare \emph{heavy} received more or less collective interpretations, respectively. The absence of the effect for \emph{big} and \emph{tall} suggests an explanation in terms of the epistemic state of the speaker: in ``move'' scenarios, the speaker is less likely to have access to individual box weights (having plausibly moved them \emph{en masse}); the listener is therefore less likely to assume that the speaker intended a distributive interpretation for which he lacks evidence. We attempt to confirm this effect with a similar scenario manipulation in Expt.~3.
 
 But before we manipulate contextual predictability and speaker knowledge directly, we extend the paraphrase methodology in Expt.~2 to naturally-occurring examples of plural predication, investigating the role of the local linguistic context.
 
@@ -429,11 +429,12 @@ Each participant was presented with 30 sentences; 15 of these sentences were dra
 from the original set of the 40 most frequent instances. The other sentences were constructed by randomly pairing subjects and predicates from the original set of 40 to create 15 novel sentences for each participant. 
 %\ndg{were there any restrictions? eg could a participant see the same predicate / subject twice? were the constructed sentences really random for each participant, or was there a fixed set of them?} \gcs{the only restriction was that the sentences were not among the original 40 most frequent ones. a participant could see the same predicate/subject twice in the novel sentences, and they were randomly constructed for each participant}
 
-Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant.\footnote{The full experiment is viewable online at \url{http://cocolab.stanford.edu/experiments/collective/expt2a/expt2a.html}.} Participants rated two possible paraphrases on a sliding scale. The paraphrases were either distributive (with ``each'', \ref{bnc-each}) and collective (with ``together'', \ref{bnc-together}). Given our interest in rates of collective interpretations, we are primarily concerned with collective paraphrase endorsement rates; we expect distributive paraphrase endorsement rates to give redundant information.  We included both distributive and collective paraphrases to highlight the potential ambiguity for participants.
+Each sentence was presented as an utterance by a speaker, and participants were tasked with determining what the speaker meant.\footnote{The full experiment is viewable online at \url{http://cocolab.stanford.edu/experiments/collective/expt2a/expt2a.html}.} Participants rated two possible paraphrases on a sliding scale. The paraphrases were distributive (with ``each'', \ref{bnc-each}) and collective (with ``together'', \ref{bnc-together}). 
 
 \ex. \a. The \textsc{noun}s each were \textsc{adjective}. \label{bnc-each}
 \b. The \textsc{noun}s together were \textsc{adjective}. \label{bnc-together}
 
+Given our interest in rates of collective interpretations, we are primarily concerned with collective paraphrase endorsement rates; we expect distributive paraphrase endorsement rates to give redundant information.  We included both distributive and collective paraphrases to highlight the potential ambiguity for participants.
 Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what the speaker intended by his or her utterance. Before rating its paraphrases, participants judged whether the utterance made sense (choosing between "Yes" and "No"). We analyzed data from the 85 participants who indicated that their native language was English.
 
 %\subsubsection{Predictions}
@@ -455,8 +456,7 @@ We begin with a look at the range of collective endorsement ratings.\footnote{A 
 	\caption{Collective paraphrase endorsement rates for different noun-predicate combinations in Expt.~2a (i.e., for different sentences).} \label{sentence-coll}
 \end{figure}
 
-\gcs{is the following any better?}
-There are 8 predicates that occur with different nouns in our small corpus; we plot their average collective endorsement ratings in Fig.~\ref{noun-pred-coll}.
+There are 8 predicates that occur with multiple nouns in our small corpus; we plot their average collective endorsement ratings in Fig.~\ref{noun-pred-coll}.
 %
 %
 For at least 3 out of these 8 predicates, rates of collective endorsement differ significantly by subject noun (\emph{bright}, \emph{closed}, \emph{small}; see Appendix \ref{2-stats} for details). We draw the reader's attention to the case of stubbornly distributive \emph{small} (bottom right of Fig.~\ref{noun-pred-coll}). 
@@ -465,7 +465,7 @@ If stubborn distributivity were a binary, predicate-level phenomenon hard-coded 
 A linear mixed effects model predicting collective endorsement rates by subject noun for \emph{small}, with random by-participant intercepts, finds that sentences with the subject \emph{numbers} received greater rates of collective endorsement than sentences with \emph{children} ($\beta=-0.15$, $SE=0.07$, $t=-2.24$, $p<0.05$), \emph{rooms} ($\beta=-0.19$, $SE=0.07$, $t=-2.73$, $p<0.01$), or \emph{classes} ($\beta=-0.27$, $SE=0.07$, $t=-3.87$, $p<0.01$).\footnote{We find the same pattern of results if instead we compare each subject noun with the grand mean (i.e., through effect, or deviation, coding of our variables): \emph{numbers} deviates significantly, while the other nouns do not.} Curiously, \emph{numbers} names objects that do not instantiate physically, which plausibly increases the predictability of their collective size (i.e., their summation) and thus increases rates of collective interpretations.
 %\ndg{we should have some analysis of the other seven predicates -- maybe there is an overall test of whether noun matters? or do tests within predicates (add significance stars to the figure...).}\gcs{would it be better to only plot \emph{small} in fig.~\ref{noun-pred-coll}?} 
 
-Here we rely on the chance occurrence of multiple subject nouns in our small corpora to test the effects of local linguistic context. In Expt.~2b, we follow up on the current results by systematically testing the effect of subject nouns on a narrower set of predicates.
+This analysis relies on the chance occurrence of multiple subject nouns in our small corpora to test the effects of local linguistic context. In Expt.~2b, we follow up on this result by systematically testing the effect of subject nouns on a narrower set of predicates.
 
 \begin{figure}[h!]
 	\centering
@@ -519,8 +519,8 @@ Fig.~\ref{bhtcoll} plots average collective endorsement ratings for each of the 
 %
 To compare the predicates with each other, we fit a linear mixed effects model predicting collective endorsement by predicate, with random intercepts for participants and nouns, and random slopes for participants. The predicate predictor was dummy coded with \emph{heavy} as the reference level. There were main effects for both contrasts, such that \emph{big} ($\beta=-0.22$, $SE=0.07$, $t=-3.24$, $p<0.01$) and \emph{tall} ($\beta=-0.20$, $SE=0.06$, $t=-3.20$, $p<0.01$) led to lower rates of collective endorsement than \emph{heavy}. 
 
-We might take the split in behavior between \emph{heavy} on the one hand and \emph{big} and \emph{tall} on the other as evidence for a categorical divide between complaisantly collective and stubbornly distributive predicates. However, comparing the predicates at the level of individual subject nouns suggests otherwise: the subject noun with the highest rates of collective endorsement for \emph{big}, \emph{waves}, yields rates of collective endorsement that do not differ significantly from \emph{heavy}'s least collective subject noun, \emph{men} (42\% \emph{big waves} vs.~38\% \emph{heavy men}; $\beta=-0.04$, $SE=0.09$, $t=-0.51$, $p=0.62$). The same holds of the comparison between \emph{tall}'s most collective subject noun, \emph{trees}, and \emph{heavy men} (30\% \emph{tall trees}; $\beta=-0.07$, $SE=0.08$, $t=-0.87$, $p=0.39$). \gcs{is this better?}
-%
+We might take the split in behavior between \emph{heavy} on the one hand and \emph{big} and \emph{tall} on the other as evidence for a categorical divide between complaisantly collective and stubbornly distributive predicates. However, comparing the predicates at the level of individual subject nouns suggests otherwise: the subject noun with the highest rates of collective endorsement for \emph{big}, \emph{waves}, yields rates of collective endorsement that do not differ significantly from \emph{heavy}'s least collective subject noun, \emph{men} (42\% \emph{big waves} vs.~38\% \emph{heavy men}; $\beta=-0.04$, $SE=0.09$, $t=-0.51$, $p=0.62$). The same holds of the comparison between \emph{tall}'s most collective subject noun, \emph{trees}, and \emph{heavy men} (30\% \emph{tall trees}; $\beta=-0.07$, $SE=0.08$, $t=-0.87$, $p=0.39$). 
+
 
 \begin{figure}[htb]
 	\centering
@@ -561,9 +561,13 @@ Narrowing our focus to the predicates \emph{big}, \emph{heavy}, and \emph{tall} 
 
 %We interpret this finding for \emph{tall} as evidence for the context-dependent nature of these predications. In Expt.~1, participants had specific, salient sets against which to evaluate the property. In the current experiment, this information was lacking, and so were collective interpretations. In other words, without information about how the subject physically instantiates, participants are wary of assigning collective interpretations to predicates of physical extent. Here we again find evidence for the role of contextual predictability of the relevant property in the disambiguation of plural predications: in Expt.~1, collective height was particularly salient (boxes came stacked on top of each other); here, collective height was underspecified (it would depend on the specific physical arrangement of the subject in question).
 
-By comparing specific subject nouns within predicates, we begin to find evidence for the context-dependent nature of these predications. With \emph{big}, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a, this finding suggests that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on these findings concerning the role of contextual predictability and noise in interpretation with a direct manipulation of predictability in Expt.~3.
+By comparing specific subject nouns within predicates, we begin to find evidence for the context-dependent nature of these predications. With \emph{big}, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a. Several interpretations of this finding are possible; one is that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on this hypothesis with a direct manipulation of predictability in Expt.~3.
 
-Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a collective interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
+Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a distributive interpretation. Lids and bags are probably picked up together, certainly more so than trees, and yet more so than loads or men. 
+If speakers experience only the collective weight of a plurality, not the individual weights of the members, they lack knowledge which would license the distributive meaning. 
+If listeners are aware of this, then the alternative, collective reading becomes more likely for collections (such as lids) that are likely to be lifted together.
+%Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. 
+As with contextual predictability, we follow up on this result with a direct manipulation of speaker access to knowledge in Expt.~3.
 
 
 \section{Experiment 3: Manipulating context}
@@ -576,7 +580,7 @@ According to our hypothesis, greater predictability should lead to more collecti
 For instance, if collections of certain boxes are always stacked neatly, the collective height of a stack can be stably predicted (as the sum of individual heights); if these boxes come in jumbled-up piles the collective height is less predictable.
 In Expt.~3 we manipulate expectations about the arrangement of boxes, using the paraphrase methodology to test the effect on the interpretation of plural predications. We expect to see an effect on \emph{tall}, whose collective property is the direct target of our manipulation; we also expect to see a more moderate effect on \emph{big} to the extent that big can refer to height; we expect no effect on \emph{heavy}, which is stable regardless of arrangement.
 
-In Expt.~3 we also return to the effect of speaker's knowledge. Recall the prediction of our pragmatic hypothesis, that more collective interpretations should attain when the speaker lacks knowledge about individual object properties (but has knowledge about collective properties). We conjectured that the effect of \emph{heavy}'s subject nouns in Expt.~2 was due to knowledge in this way: for bigger objects the likelihood of interacting with them individually is lower, making the likelihood of individual weight knowledge lower.
+In Expt.~3 we also return to the effect of speaker's knowledge. Recall the prediction of our pragmatic hypothesis, that more collective interpretations should attain when the speaker lacks knowledge about individual object properties (but has knowledge about collective properties). We conjectured that the effect of \emph{heavy}'s subject nouns in Expt.~2 was due to knowledge in this way: for smaller objects the likelihood of interacting with them individually is lower, making the likelihood of individual weight knowledge lower.
 In Expt.~1 we attempted to manipulate the likelihood that the speaker had interacted with the boxes individually, via the ``inspect'' scenario, versus only collectively, in the ``move'' scenario. We found a trend in the predicted direction that did not reach significance.
 It is possible that this effect was real, but small because of a bias for the distributive referent (leading to a floor effect).
 In Expt.~3, we repeat the move/inspect manipulation using the pure paraphrase endorsement dependent measure of Expt.~2, which may have greater sensitivity than a binary choice between possible referents.
@@ -613,7 +617,7 @@ Also between subjects, we manipulated the variability of the \textsc{context} (`
 \end{figure}
 
 
-After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale (as in Expt.~2). The paraphrases were either distributive (with  ``each'') or collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}. For the analyses reported below, we included data from the 77 participants who indicated that their native language was English.
+After observing the dispenser in action via the context  scenarios, participants were then introduced to a second agent, Dot, whom Cubert told about some boxes he moved/inspected. Participants were tasked with helping Dot understand what Cubert meant by his utterance. To do so, they saw an utterance and rated potential paraphrases on a sliding scale (as in Expt.~2). The paraphrases were distributive (with  ``each'') and collective (with ``together'').  Scale endpoints corresponded to whether the paraphrase was ``definitely'' or ``definitely not'' what Cubert meant by his utterance (Fig. \ref{trial}). (Note that, unlike Expt.~1, there was no explicit referent visible.) Participants completed three trials in a random order with three different predicates: \emph{big}, \emph{heavy}, and \emph{tall}. For the analyses reported below, we included data from the 77 participants who indicated that their native language was English.
 
 %\ndg{links to expts? should add for all of them...}
 
