edits to model section

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,22 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-08-25 16:05:54 -0700 
+%% Created for Greg Scontras at 2015-10-09 09:28:01 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{goodmanlassiter2015,
+	Author = {Noah D. Goodman and Daniel Lassiter},
+	Booktitle = {The Handbook of Contemporary Semantics, 2nd Edition},
+	Date-Added = {2015-10-09 16:27:59 +0000},
+	Date-Modified = {2015-10-09 16:27:59 +0000},
+	Editor = {Shalom Lappin and Chris Fox},
+	Publisher = {Wiley=Blackwell},
+	Title = {Probabilistic Semantics and Pragmatics: Uncertainty in Language and Thought},
+	Year = {2015}}
 
 @book{gilbert2013,
 	Address = {New York},
