--- a/writing/Cubert/Cubert manuscript.v3.tex
+++ b/writing/Cubert/Cubert manuscript.v3.tex
@@ -96,7 +96,7 @@
 \maketitle
 
 \begin{abstract}
-\ndg{note to self: look back at abstract after rest.}
+\ndg{revise this in light of current framing and emphasis...}
 	What role does context have in the disambiguation between distributive and collective interpretations of plural predications? We focus on the phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. First, we establish a method for studying plural predication experimentally, and demonstrate that interpretation choice is mediated by three factors: the immediate linguistic context, the local discourse context, and the broader world context. 
 	Then, we formalize the contributions of context within the Bayesian Rational Speech-Acts framework, showing that stubborn distributivity emerges from the reasoning processes of speakers and listeners. 	
 	%, using unambiguous paraphrases to isolate interpretations. Then, we apply our paraphrase endorsement method to naturally-occurring examples from corpora, finding that both the narrow linguistic context and the broader discourse context mediate interpretation choices. Next, we employ the paraphrase endorsement method while manipulating properties of the context directly, and find that the probability of an interpretation depends crucially on potential variability in the property being communicated; the more variable a collective property, the less likely a collective interpretation. Stubbornly distributive predicates name collective properties that are relatively unpredictable in and across contexts (e.g., collective size will depend crucially on the way a set of objects is arranged), which leads to more variable interpretations. A more variable interpretation is potentially less informative because it requires more coordination between speakers and listeners. The interpretation is therefore less useful to speakers for communicating about the state of the world, which makes it less likely. These facts support a general model of rational communication under which the resolution of ambiguities is sensitive to the amount of variability in possible interpretations.  We formalize this pragmatic calculus using a Bayesian Rational Speech-Act model of communication.
